Kubernetes/exam_k8s/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-exam-service
  labels:
    app: k8s-exam-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: k8s-exam-api
